Begun work on FeedActivity; created TrumpetFragment, which controls a bar at the bottom of the FeedActivity allowing the user to travel to the SubmitTrumpetActivity, as well as submit images (TODO). Begun developing a semblance of color theme in colors.xml (varying shades of gray with white text).

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,11 @@
         <activity
             android:name=".CreateAccountActivity"
             android:label="@string/title_activity_create_account"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity
+            android:name=".FeedActivity"
+            android:label="@string/title_activity_feed" >
         </activity>
     </application>
 
