--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
             android:name=".FeedActivity"
             android:label="@string/title_activity_feed" >
         </activity>
+        <activity
+            android:name=".SubmitTrumpetActivity"
+            android:label="@string/title_activity_submit_trumpet" >
+        </activity>
     </application>
 
 </manifest>
