Fixed a variety of bugs. Removed FeedManager class and moved logic and querying to FeedActivity loadListViewData() function. Now loading FeedAdapter with List<ParseObject> of Trumpet objects directly, rather than providing it with a FeedManager.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,11 +29,13 @@
         </activity>
         <activity
             android:name=".FeedActivity"
-            android:label="@string/title_activity_feed" >
+            android:label="@string/title_activity_feed"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
             android:name=".SubmitTrumpetActivity"
-            android:label="@string/title_activity_submit_trumpet" >
+            android:label="@string/title_activity_submit_trumpet"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
 
