--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.parse:parse-android:1.11.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
