Many optimizations and bug fixes; scrolling on FeedActivity is now completely smooth, SubmitBar fragment and refresh are now working. Begun design of ViewTrumpetActivity and reply system; including new "detailed" TrumpetView custom view for ViewTrumpet.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,12 +30,17 @@
         <activity
             android:name=".FeedActivity"
             android:label="@string/title_activity_feed"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
         <activity
             android:name=".SubmitTrumpetActivity"
             android:label="@string/title_activity_submit_trumpet"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity
+            android:name=".ViewTrumpetActivity"
+            android:label="@string/title_activity_view_trumpet"
+            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
     </application>
 
