--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,8 @@ android {
     }
 }
 
+repositories { mavenCentral() }
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
@@ -31,4 +33,8 @@ dependencies {
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.parse:parse-android:1.11.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile ('com.facebook.android:facebook-android-sdk:4.6.0'){
+        exclude module: 'bolts-android'
+        exclude module: 'support-v4'
+    }
 }
