App is now fully functional with vast majority of current bugs fixed. Replies now work perfectly, counts are now always updated correctly, refreshing and scrolling in different activities after submission now work perfectly as well. Documentation added to all classes and all methods.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,8 @@
         <activity
             android:name=".SubmitTrumpetActivity"
             android:label="@string/title_activity_submit_trumpet"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar"
+            android:noHistory="true" >
         </activity>
         <activity
             android:name=".ViewTrumpetActivity"
