Fixed bug with Trumpet profile picture overlapping layout line in Feed, increased profile picture size throughout app to better accommodate larger devices.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,17 +8,17 @@ android {
         applicationId "jthd.trumpeter"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 4
+        versionName "1.03"
         multiDexEnabled true
     }
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
-            debuggable true
+            debuggable false
         }
     }
 }
