--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
-
+    compileSdkVersion 26
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "jthd.trumpeter"
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 26
         versionCode 4
         versionName "1.03"
         multiDexEnabled true
@@ -21,19 +20,21 @@ android {
             debuggable false
         }
     }
+    productFlavors {
+    }
 }
 
 repositories { mavenCentral() }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
-    compile 'com.android.support:support-v4:23.1.1'
-    compile 'com.parse:parse-android:1.11.0'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:design:26.1.0'
+    compile 'com.android.support:support-v4:26.1.0'
+    compile 'com.parse:parse-android:1.15.6'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile ('com.facebook.android:facebook-android-sdk:4.6.0'){
+    compile('com.facebook.android:facebook-android-sdk:4.6.0') {
         exclude module: 'bolts-android'
         exclude module: 'support-v4'
     }
